Fixed Bower component's name, changed dist files to firebaseui.*
Change-Id: I6b9d0a7e7818bfcb180cdb4a8b4ee6f5a163c7c7

--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -6,8 +6,8 @@
     <script src="https://www.gstatic.com/firebasejs/live/3.5/firebase.js"></script>
     <script src="config.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-    <script src="dist/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="dist/firebase-ui-auth.css" />
+    <script src="dist/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="dist/firebaseui.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
