--- a/demo/public/widget.html
+++ b/demo/public/widget.html
@@ -5,8 +5,8 @@
     <title>FirebaseUI Auth Demo</title>
     <script src="https://www.gstatic.com/firebasejs/live/3.5/firebase.js"></script>
     <script src="config.js"></script>
-    <script src="dist/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="dist/firebase-ui-auth.css" />
+    <script src="dist/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="dist/firebaseui.css" />
     <style>
       body {
         margin: 0;
