incorporated PR comments

--- a/soy/pages_test_dom.html
+++ b/soy/pages_test_dom.html
@@ -41,8 +41,11 @@ td {
 
   <!-- passwordSignUp -->
   <tr>
-    <td rowspan="2">passwordSignUp</td>
+    <td rowspan="3">passwordSignUp</td>
     <td><div id="password-sign-up"></div></td>
+  </tr>
+  <tr>
+    <td><div id="password-sign-up-no-name"></div></td>
   </tr>
   <tr>
     <td><div id="password-sign-up-tos"></div></td>
