Adds firebaseui.auth.AuthUI.getInstance(appId) to get the corresponding AuthUI instance as specified by the provided appId. Adds a destroy method to destroy an AuthUI instance. Fixes Nascar buttons getting grayed when user tabs through them. Hides cancel button when only Email provider is used and accountchooser.com is disabled.
PiperOrigin-RevId: 162376230
Change-Id: Ie7cc3c0f86fef05bf5322af342cc1abc2e6037d1

--- a/soy/pages_test_dom.html
+++ b/soy/pages_test_dom.html
@@ -23,7 +23,7 @@ td {
 
   <!-- signIn -->
   <tr>
-    <td rowspan="3">signIn</td>
+    <td rowspan="4">signIn</td>
     <td><div id="sign-in"></div></td>
   </tr>
   <tr>
@@ -31,6 +31,9 @@ td {
   </tr>
   <tr>
     <td><div id="sign-in-busy"></div></td>
+  </tr>
+  <tr>
+    <td><div id="sign-in-no-cancel-button"></div></td>
   </tr>
 
   <!-- passwordSignIn -->
