--- a/demo/public/widget.html
+++ b/demo/public/widget.html
@@ -34,7 +34,13 @@
         },
         'signInOptions': [
           // TODO(developer): Remove the providers you don't need for your app.
-          firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+          {
+            provider: firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+            // Required to enable this provider in One-Tap Sign-up.
+            authMethod: 'https://accounts.google.com',
+            // Required to enable ID token credentials for this provider.
+            clientId: CLIENT_ID
+          },
           firebase.auth.FacebookAuthProvider.PROVIDER_ID,
           firebase.auth.TwitterAuthProvider.PROVIDER_ID,
           firebase.auth.GithubAuthProvider.PROVIDER_ID,
@@ -47,7 +53,10 @@
           }
         ],
         // Terms of service url.
-        'tosUrl': 'https://www.google.com'
+        'tosUrl': 'https://www.google.com',
+        'credentialHelper': CLIENT_ID && CLIENT_ID != 'YOUR_OAUTH_CLIENT_ID' ?
+            firebaseui.auth.CredentialHelper.GOOGLE_YOLO :
+            firebaseui.auth.CredentialHelper.ACCOUNT_CHOOSER_COM
       };
 
       // Initialize the FirebaseUI Widget using Firebase.
