--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>FirebaseUI Auth Demo</title>
     <link rel="manifest" href="manifest.json">
-    <script src="https://www.gstatic.com/firebasejs/live/4.3/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/live/4.8/firebase.js"></script>
     <script src="config.js"></script>
     <script src="common.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
@@ -26,6 +26,7 @@
               <div id="name"></div>
               <div id="email"></div>
               <div id="phone"></div>
+              <div id="is-new-user"></div>
               <div class="clearfix"></div>
             </div>
             <p>
