- Support `Continue as guest` and add new sign in provider `firebaseui.auth.AnonymousAuthProvider`. - Add the ability to configure country selection for phone Auth. - Add return type for `start()` and `setConfig()` in typescript declaration.
PiperOrigin-RevId: 205712709
Change-Id: Ie3d1a50be4fbd95b8ba02d1c6f500f553ff4ba60

--- a/demo/public/widget.html
+++ b/demo/public/widget.html
@@ -50,7 +50,8 @@
             recaptchaParameters: {
               size: getRecaptchaMode()
             }
-          }
+          },
+          firebaseui.auth.AnonymousAuthProvider.PROVIDER_ID
         ],
         // Terms of service url.
         'tosUrl': 'https://www.google.com',
