- Removes callback flicker when there is no pending redirect. - Adds the ability to use spinners instead of progress bars. This is used only for the nascar screen. - Updates Readme for customizing country selector.
PiperOrigin-RevId: 207748692
Change-Id: Iaebc5cd3a514fb065e4c901dc00348755daf2bab

--- a/soy/elements_test_dom.html
+++ b/soy/elements_test_dom.html
@@ -2,7 +2,6 @@
 
 <style>
 table {
-  border-collapse: collapse;
   margin: 0 0 40px;
 }
 table,
@@ -156,9 +155,19 @@ td {
 
   <!-- busyIndicator -->
   <tr>
-    <td>busyIndicator</td>
+    <td rowspan="2">busyIndicator</td>
     <td>
       <div id="busy-indicator" class="firebaseui-container">
+        <h1>Title</h1>
+        <p><a href="https://mail.google.com">Gmail</a></p>
+        <p><a href="https://drive.google.com">Google Drive</a></p>
+        <p><a href="https://calendar.google.com">Google Calendar</a></p>
+      </div>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <div id="busy-indicator-spinner" class="firebaseui-container">
         <h1>Title</h1>
         <p><a href="https://mail.google.com">Gmail</a></p>
         <p><a href="https://drive.google.com">Google Drive</a></p>
