--- a/soy/pages_test_dom.html
+++ b/soy/pages_test_dom.html
@@ -180,7 +180,7 @@ td {
 
   <!-- phoneSignInStart -->
   <tr>
-    <td rowspan="3">phoneSignInStart</td>
+    <td rowspan="4">phoneSignInStart</td>
     <td><div id="phone-sign-in-start-invisible-recaptcha"></div></td>
   </tr>
   <tr>
@@ -188,6 +188,9 @@ td {
   </tr>
   <tr>
     <td><div id="phone-sign-in-start-full-message"></div></td>
+  </tr>
+  <tr>
+    <td><div id="phone-sign-in-start-no-cancel-button"></div></td>
   </tr>
 
   <!-- phoneSignInFinish-->
