Added support for generic OAuth providers

--- a/soy/pages_test_dom.html
+++ b/soy/pages_test_dom.html
@@ -146,6 +146,12 @@ td {
     <td><div id="federated-linking"></div></td>
   </tr>
 
+  <!-- unsupportedProvider -->
+  <tr>
+    <td>unsupportedProvider</td>
+    <td><div id="unsupported-provider"></div></td>
+  </tr>
+
   <!-- passwordReset -->
   <tr>
     <td>passwordReset</td>
