--- a/demo/public/widget.html
+++ b/demo/public/widget.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>FirebaseUI Auth Demo</title>
-    <script src="https://www.gstatic.com/firebasejs/5.5/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.10/firebase.js"></script>
     <script src="config.js"></script>
     <script src="common.js"></script>
     <script src="dist/firebaseui.js"></script>
@@ -53,6 +53,13 @@
             recaptchaParameters: {
               size: getRecaptchaMode()
             }
+          },
+          {
+            provider: 'microsoft.com',
+            providerName: 'Microsoft',
+            buttonColor: '#2F2F2F',
+            iconUrl: 'https://docs.microsoft.com/en-us/azure/active-directory/develop/media/howto-add-branding-in-azure-ad-apps/ms-symbollockup_mssymbol_19.png',
+            loginHintKey: 'login_hint'
           },
           firebaseui.auth.AnonymousAuthProvider.PROVIDER_ID
         ],
