--- a/demo/public/widget.html
+++ b/demo/public/widget.html
@@ -58,6 +58,9 @@
             provider: 'microsoft.com',
             loginHintKey: 'login_hint'
           },
+          {
+            provider: 'apple.com',
+          },
           firebaseui.auth.AnonymousAuthProvider.PROVIDER_ID
         ],
         // Terms of service url.
