Adds ability to customize IdP buttons.
Allow customization of native providers.
In addition, allow ability to override the entire button label via "fullLabel".
This will be used instead of "Sign in with $providerName" for the long name.
However, for the short name, $providerName is still used.

--- a/soy/pages_test_dom.html
+++ b/soy/pages_test_dom.html
@@ -282,8 +282,11 @@ td {
 
   <!-- providerSignIn -->
   <tr>
-    <td rowspan="2">providerSignIn</td>
+    <td rowspan="3">providerSignIn</td>
     <td><div id="provider-sign-in"></div></td>
+  </tr>
+  <tr>
+    <td><div id="provider-sign-in-customization"></div></td>
   </tr>
   <tr>
     <td><div id="provider-sign-in-busy"></div></td>
