--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -58,10 +58,8 @@
                        value="emailLink">
                 Email Link
               </label><br>
-              Disable email sign up:
-              <label for="email-disableSignUp"></label>
-                <input type="checkbox" id="email-disableSignUp-status" name="disableEmailSignUpStatus">
-              <label for="email-disableSignUp"></label>
+              <label for="disableEmailSignUpStatus">Disable email sign up:</label>
+              <input type="checkbox" id="email-disableSignUp-status" name="disableEmailSignUpStatus">
             </fieldset>
             <p>
               <button id="sign-in-with-redirect">Sign In with Redirect</button>
