Build firebaseui-esm for use against firebase/compat/*

--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>FirebaseUI Auth Demo</title>
     <link rel="manifest" href="manifest.json">
-    <script src="https://www.gstatic.com/firebasejs/7.4.0/firebase.js"></script>
-    <script src="config.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0-beta.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0-beta.2/firebase-auth-compat.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <script src="/config.js"></script>
     <script src="common.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
     <script src="dist/firebaseui.js"></script>
