attempted to incorporate linkedin sign on

--- a/demo/public/widget.html
+++ b/demo/public/widget.html
@@ -44,6 +44,10 @@
           firebase.auth.TwitterAuthProvider.PROVIDER_ID,
           firebase.auth.GithubAuthProvider.PROVIDER_ID,
           {
+            provider: 'linkedin.com',
+            signInMethod: getLinkedInSignInMethod(),
+          },
+          {
             provider: firebase.auth.EmailAuthProvider.PROVIDER_ID,
             signInMethod: getEmailSignInMethod(),
             disableSignUp: {
