--- a/soy/elements_test_dom.html
+++ b/soy/elements_test_dom.html
@@ -145,7 +145,7 @@ td {
       <div id="info-bar" class="firebaseui-container">
         <p>First paragraph.</p>
         <p>Second paragraph.</p>
-        <p>Third paragrapth.</p>
+        <p>Third paragraph.</p>
       </div>
     </td>
   </tr>
