--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
    <link rel="stylesheet" href="src/index.css">
   </body>
 </html>
