--- a/examples/shadcn/index.html
+++ b/examples/shadcn/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shadcn</title>
+    <link rel="stylesheet" href="src/index.css" />
   </head>
   <body>
     <div id="root"></div>
