chore: Rework react example app

--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body class="dark:bg-neutral-900 dark:text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
    <link rel="stylesheet" href="src/index.css">
