chore: Update example app

--- a/examples/shadcn/index.html
+++ b/examples/shadcn/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="src/index.css" />
   </head>
   <body>
+    <script>
+      document.documentElement.classList.toggle("dark", localStorage.theme === "dark" || (!("theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches));
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
