chore: Update angular example styling

--- a/examples/angular/src/index.html
+++ b/examples/angular/src/index.html
@@ -18,12 +18,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularSsr</title>
+  <title>Firebase UI for Angular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="dark:bg-neutral-900 dark:text-white">
+  <script>
+    document.documentElement.classList.toggle("dark", localStorage.theme === "dark" || (!("theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches));
+  </script>
   <app-root></app-root>
 </body>
 </html>
